--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,12 +1,68 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>
-      Ionic Blank
+      Home
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your  wsh
-  <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+<ion-content>
+  <ion-list>
+    <ion-card href="#">
+      <ion-card-header>
+        <ion-card-title>
+          Meeting about cloud
+        </ion-card-title>
+        <ion-card-subtitle>
+          30 novembre 2019 - 15:05 -
+          <ion-icon name="time"></ion-icon>
+          2h32
+        </ion-card-subtitle>
+      </ion-card-header>
+    </ion-card>
+
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>
+          Conference on Devops
+        </ion-card-title>
+        <ion-card-subtitle>
+          02 Décembre 2019 - 12:38 -
+          <ion-icon name="time"></ion-icon>
+          1h12
+        </ion-card-subtitle>
+      </ion-card-header>
+    </ion-card>
+
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>
+          Learn how to learn
+        </ion-card-title>
+        <ion-card-subtitle>
+          12 Décembre 2019 - 16h:30 -
+          <ion-icon name="time"></ion-icon>
+          45m36
+        </ion-card-subtitle>
+      </ion-card-header>
+    </ion-card>
+
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>
+          Meeting about cloud
+        </ion-card-title>
+        <ion-card-subtitle>
+          30 novembre 2019 - 15:05 -
+          <ion-icon name="time"></ion-icon>
+          2h32
+        </ion-card-subtitle>
+      </ion-card-header>
+    </ion-card>
+  </ion-list>
+
+  <ion-button [routerDirection]="'forward'" [routerLink]="['/logout']" color="danger">Log Out</ion-button>
 </ion-content>
