--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,6 +10,25 @@
 </ion-header>
 
 <ion-content>
+
+  <ion-card>
+    <ion-card-header>
+
+      <div style="display: flex; justify-content: center;">
+        <ion-button color="primary">
+          <ion-icon name="microphone"></ion-icon>
+          Start recording
+        </ion-button>
+        <ion-button color="primary">
+          <ion-icon name="document"></ion-icon>
+          Import audio
+        </ion-button>
+      </div>
+
+
+    </ion-card-header>
+  </ion-card>
+
   <ion-list>
     <ion-card href="#">
       <ion-card-header>
@@ -21,7 +40,12 @@
           <ion-icon name="time"></ion-icon>
           2h32
         </ion-card-subtitle>
+        <ion-button color="danger" size="small">
+          <ion-icon name="trash" slot="icon-only"></ion-icon>
+        </ion-button>
+
       </ion-card-header>
+
     </ion-card>
 
     <ion-card>
@@ -34,6 +58,10 @@
           <ion-icon name="time"></ion-icon>
           1h12
         </ion-card-subtitle>
+        <ion-button color="danger" size="small">
+          <ion-icon name="trash" slot="icon-only"></ion-icon>
+        </ion-button>
+
       </ion-card-header>
     </ion-card>
 
@@ -47,6 +75,10 @@
           <ion-icon name="time"></ion-icon>
           45m36
         </ion-card-subtitle>
+        <ion-button color="danger" size="small">
+          <ion-icon name="trash" slot="icon-only"></ion-icon>
+        </ion-button>
+
       </ion-card-header>
     </ion-card>
 
@@ -60,9 +92,11 @@
           <ion-icon name="time"></ion-icon>
           2h32
         </ion-card-subtitle>
+        <ion-button color="danger" size="small">
+          <ion-icon name="trash" slot="icon-only"></ion-icon>
+        </ion-button>
       </ion-card-header>
     </ion-card>
   </ion-list>
 
-  <ion-button [routerDirection]="'forward'" [routerLink]="['/logout']" color="danger">Log Out</ion-button>
 </ion-content>
