--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,12 +10,12 @@
 </ion-header>
 
 <ion-content>
-
   <ion-card>
     <ion-card-header>
-
+      <h2 style="text-align:center;">Record a meeting.</h2>
       <div style="display: flex; justify-content: center;">
-        <ion-button color="primary">
+
+        <ion-button [routerDirection]="'forward'" [routerLink]="['/recording']" color="primary">
           <ion-icon name="microphone"></ion-icon>
           Start recording
         </ion-button>
