auth guard refonctionnel

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,7 +15,7 @@
       <h2 style="text-align:center;">Record a meeting.</h2>
       <div style="display: flex; justify-content: center;">
 
-        <ion-button [routerDirection]="'forward'" [routerLink]="['/recording']" color="primary">
+        <ion-button color="primary">
           <ion-icon name="microphone"></ion-icon>
           Start recording
         </ion-button>
