--- a/src/app/pages/idea-list/idea-list.page.html
+++ b/src/app/pages/idea-list/idea-list.page.html
@@ -16,7 +16,7 @@
       <h2 style="text-align:center;">Record a meeting.</h2>
       <div style="display: flex; justify-content: center;">
 
-        <ion-button [routerDirection]="'forward'" [routerLink]="['/recording']" color="primary">
+        <ion-button [routerDirection]="'forward'" [routerLink]="['/idea']" color="primary">
           <ion-icon name="microphone"></ion-icon>
           Start recording
         </ion-button>
@@ -37,6 +37,7 @@
   </ion-fab>
 
   <ion-list>
+
     <ion-item button [routerLink]="['/idea', idea.id]" *ngFor="let idea of (ideas | async)">
       {{ idea.name }}
     </ion-item>
