--- a/src/app/pages/idea-list/idea-list.page.html
+++ b/src/app/pages/idea-list/idea-list.page.html
@@ -41,7 +41,7 @@
     <ion-card *ngFor="let idea of (ideas | async)">
       <ion-card-header>
        <ion-card-title> {{ idea.name }}</ion-card-title>
-         <ion-card-subtitle>30 novembre 2019 - 15:05 -<ion-icon name="time"></ion-icon>2h32</ion-card-subtitle>
+         <ion-card-subtitle><ion-icon name="time"></ion-icon>{{ idea.date.toDate() | date: 'medium' }}</ion-card-subtitle>
         <ion-button  [routerLink]="['/idea', idea.id]" size="small"  color="success">
           <ion-icon name="save" slot="start"></ion-icon>
           Update
