--- a/src/app/pages/idea-details/idea-details.page.html
+++ b/src/app/pages/idea-details/idea-details.page.html
@@ -33,23 +33,17 @@
 
 
 
-<ion-button full (click)="startListening()">Start Listeningg</ion-button>
+<ion-button full (click)="startListening()">Start Listening</ion-button>
 <ion-button full (click)="stopListening()" *ngIf="isIos()">Get Permission</ion-button>
 <ion-card>
   <ion-card-header >
 
-    <ion-text [(ngModel)]="idea.speech">>
-      {{ idea.speech }}
-    </ion-text>
 
   </ion-card-header>
   <ion-card-content>
     <ion-list>
       <ion-item *ngFor="let match of matches">
-        <ion-card>
-          {{ matches }}
-        </ion-card>
-
+        {{ match }}
       </ion-item>
     </ion-list>
   </ion-card-content>
