--- a/src/app/pages/idea-list/idea-list.page.html
+++ b/src/app/pages/idea-list/idea-list.page.html
@@ -25,28 +25,29 @@
           In progress
         </ion-button>
       </div>
-
-
     </ion-card-header>
   </ion-card>
 
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button routerLink="/idea">
-      <ion-icon name="add"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
 
 
   <ion-list>
     <ion-card *ngFor="let idea of (ideas | async)">
       <ion-card-header>
        <ion-card-title> {{ idea.name }}</ion-card-title>
-         <ion-card-subtitle><ion-icon name="time"></ion-icon>{{ idea.date.toDate() | date: 'medium' }}
+        <ion-card-header>
+          <ion-icon name="time"></ion-icon>
+          {{ idea.date.toDate() | date: 'medium' }}
+        </ion-card-header>
+        <ion-card-subtitle>
          {{ idea.speech }}
          </ion-card-subtitle>
         <ion-button  [routerLink]="['/idea', idea.id]" size="small"  color="success">
           <ion-icon name="save" slot="start"></ion-icon>
           Update
+        </ion-button>
+        <ion-button [routerLink]="['/idea', idea.id]" color="danger" size="small">
+          <ion-icon name="trash" slot="start"></ion-icon>
+          Delete
         </ion-button>
       </ion-card-header>
     </ion-card>
