--- a/src/app/pages/idea-list/idea-list.page.html
+++ b/src/app/pages/idea-list/idea-list.page.html
@@ -15,7 +15,6 @@
     <ion-card-header>
       <h2 style="text-align:center;">Record a meeting.</h2>
       <div style="display: flex; justify-content: center;">
-
         <ion-button [routerDirection]="'forward'" [routerLink]="['/idea']" color="primary">
           <ion-icon name="microphone"></ion-icon>
           Start recording
@@ -45,7 +44,7 @@
           <ion-icon name="save" slot="start"></ion-icon>
           Update
         </ion-button>
-        <ion-button [routerLink]="['/idea', idea.id]" color="danger" size="small">
+          <ion-button (click)="delete_idea(idea)" color="danger" size="small">
           <ion-icon name="trash" slot="start"></ion-icon>
           Delete
         </ion-button>
