--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -14,8 +14,8 @@
     <ion-card>
         <ion-card-header>
             <ion-label>
-                The goal of this application is to record a meeting, make a speech to text, summarize, and sending it to
-                the collaborators by email.
+                The goal of this application is about to record a meeting, to make a speech to text, to summarize, and
+                to send it to collaborators by email.
             </ion-label>
         </ion-card-header>
     </ion-card>
