--- a/src/app/pages/idea-details/idea-details.page.html
+++ b/src/app/pages/idea-details/idea-details.page.html
@@ -9,7 +9,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
   <ion-item>
     <ion-label position="stacked">Name</ion-label>
     <ion-input [(ngModel)]="idea.name" required></ion-input>
@@ -17,27 +17,27 @@
 
   <ion-item>
     <ion-label position="stacked">Notes</ion-label>
-    <ion-textarea [(ngModel)]="idea.notes" rows="4"></ion-textarea>
+    <ion-textarea [(ngModel)]="idea.notes" rows="3"></ion-textarea>
   </ion-item>
 </ion-content>
+<ion-card>
+  <ion-button (click)="startListening()">Start Listening</ion-button>
+  <ion-button (click)="stopListening()" *ngIf="isIos()">Get Permission</ion-button>
+</ion-card>
 
+<ion-card>
 <ion-footer *ngIf="!idea.id">
   <ion-toolbar color="success">
     <ion-button [routerDirection]="'forward'" [routerLink]="['/home']" expand="full" fill="clear" color="light" (click)="addIdea()">
       <ion-icon name="checkmark" slot="start"></ion-icon>
-        Add a conversation!
+      Add a conversation!
     </ion-button>
   </ion-toolbar>
 </ion-footer>
-
-
-<ion-button (click)="startListening()" full>Start Listening</ion-button>
-<ion-button (click)="stopListening()" *ngIf="isIos()">Get Permission</ion-button>
-<ion-card>
   <ion-card-header >
   </ion-card-header>
-    <ion-card-content>
-        {{ idea.speech }}
+  <ion-card-content>
+    {{ idea.speech }}
   </ion-card-content>
 </ion-card>
 
