--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -9,7 +9,7 @@
         <form [formGroup]="loginForm">
 
             <ion-item>
-                <ion-label position="stacked">Email</ion-label>
+                <ion-label position="stacked">Emaill</ion-label>
                 <ion-input type="email" formControlName="email" placeholder="Email address"></ion-input>
             </ion-item>
             <ion-item>
